--- a/ica/quarto-demo.qmd
+++ b/ica/quarto-demo.qmd
@@ -7,7 +7,7 @@ format:
     embed-resources: true
 ---
 
-# Intro
+## Intro
 
 
 **Macalester College** is in the *Twin Cities*.
@@ -29,7 +29,7 @@ Check it out for yourself:
 
 
 
-# Exercise 1: Deduce Quarto features
+## Exercise 1: Deduce Quarto features
 
 Check out the appearance and contents of this document. Thoughts?
 
@@ -61,7 +61,7 @@ Toggling between the .qmd and .html files, explain the purpose of the following 
 
 
 
-# Exercise 2: Code
+## Exercise 2: Code
 
 
 How does this appear in the .qmd? The .html? So...?!
@@ -82,7 +82,7 @@ seq(from = 100, to = 1000, by = 50)
 
 
 
-# Exercise 3: Chunks
+## Exercise 3: Chunks
 
 Quarto isn't a mind reader -- we must distinguish R code from text.
 We do so by putting code inside an **R chunk**:
@@ -106,7 +106,7 @@ seq(from = 100, to = 1000, by = 50)
 
 
 
-# Exercise 4: Practice
+## Exercise 4: Practice
 
 - Use R code to create the following sequence: 10 10 10 10
 - Store the sequence as `four_tens`.
@@ -128,7 +128,7 @@ sum(four_tens)
 
 
 
-# Exercise 5: Fix this code
+## Exercise 5: Fix this code
 
 Code is a form of communication, and the code below doesn't cut it.
 
@@ -147,7 +147,7 @@ No_students_in_class
 \
 
 
-# Exercise 6: Comments
+## Exercise 6: Comments
 
 Run the chunk below.
 Notice that R ignores anything in a line starting with a pound sign (`#`).
