--- a/ica/ica-multi.qmd
+++ b/ica/ica-multi.qmd
@@ -3,3 +3,198 @@ title: "Mulivariate Viz"
 ---
 
 Use this file for practice with the **mulivariate viz** in-class activity.  Refer to the class website for details.
+
+## Review {.unnumbered}
+
+```{r}
+library(tidyverse)
+
+# Import data
+weather <- read.csv("https://mac-stat.github.io/data/weather_3_locations.csv") |> 
+  mutate(date = as.Date(date))  
+
+# Check out the first 6 rows
+head(weather)
+
+# What are the units of observation?
+# weather on a certain date
+
+# How many data points do we have? 
+dim(weather)
+2367*24
+
+# What type of variables do we have?
+str(weather)
+```
+
+### Example 1 {.unnumbered}
+
+```{r}
+ggplot(weather, aes(x=temp3pm))+
+  geom_density()
+```
+
+### Example 2 {.unnumbered}
+How do afternoon temperatures (`temp3pm`) differ by `location`?
+```{r}
+# plot 2 (no facets or densities)
+ggplot(weather, aes(x=temp3pm, fill=location))+
+  geom_histogram(color="white")
+
+# plot 3 (facets)
+ggplot(weather, aes(x=temp3pm, fill=location))+
+  geom_histogram(color="white",binwidth=3)+
+  facet_wrap(~location)
+
+```
+
+### Example 3 {.unnumbered}
+```{r}
+# Don't worry about the syntax (we'll learn it soon)
+woll <- weather |>
+  filter(location == "Wollongong") |> 
+  mutate(date = as.Date(date))  
+
+# How often does it raintoday?
+# Fill your geometric layer with the color blue.
+ggplot(woll, aes(x = raintoday))+
+  geom_bar(fill="blue")
+
+# If it does raintoday, what does this tell us about raintomorrow?
+# Use your intuition first
+ggplot(woll, aes(x = raintoday, fill=raintomorrow))+
+  geom_bar(position="fill") 
+
+```
+
+### Example 4 {.unnumbered}
+```{r}
+# THINK: What variable goes on the y-axis?
+# For the curve, try adding span = 0.5 to tweak the curvature
+ggplot(woll, aes(x=date, y=temp3pm))+
+  geom_point()+
+  geom_smooth(span=0.5)
+
+
+# Instead of a curve that captures the general TREND,
+# draw a line that illustrates the movement of RAW temperatures from day to day
+# NOTE: We haven't learned this geom yet! Guess.
+ggplot(woll, aes(y = temp3pm, x = date))+
+  geom_point()+
+  geom_line()
+```
+* the temperature is higher in January/summer months, but lower in July/winter months
+* it tends to vary with the seasons in a sinusoidal pattern
+* some outliers (eg very hot days or very cold days)
+
+### Example 5 {.unnumbered}
+```{r}
+# Plot temp3pm vs temp9am
+# Change the code in order to indicate the location to which each data point corresponds
+ggplot(weather, aes(y = temp3pm, x = temp9am, color=location)) + 
+  geom_point()
+  scale_shape_manual(values=c(3,4,2))
+
+# Change the code in order to indicate the location to which each data point corresponds
+# AND identify the days on which it rained / didn't raintoday
+ggplot(weather, aes(y = temp3pm, x = temp9am, color=location, shape=raintoday)) + 
+  geom_point()+
+  scale_shape_manual(values=c(1,2))
+
+```
+```{r}
+# Change the code in order to construct a line plot of temp3pm vs date for each separate location (no points!)
+ggplot(weather, aes(y = temp3pm, x = date, color = location)) + 
+  geom_line()
+```
+## In-Class Exercises
+```{r}
+# Import and check out data
+education <- read.csv("https://mac-stat.github.io/data/sat.csv")
+head(education)
+
+library(tidyverse)
+```
+
+### Exercise 1 {.unnumbered}
+```{r}
+ggplot(education, aes(x=sat))+
+  geom_density()
+```
+**Observations**
+* The main peak is around 900, but there is a second, smaller peak near 1050
+* range: 800 to 1100
+* the mean might be skewed high due to the high outliers, but expected outcome is between 900 and 1000
+* states with less poor people have higher scores...
+
+
+### Exercise 2 {.unnumbered}
+```{r}
+# Construct a plot of sat vs expend
+# Include a "best fit linear regression model" (HINT: method = "lm")
+
+ggplot(education, aes(x=expend, y=sat))+
+  geom_point()+
+  geom_smooth(method="lm")
+
+# Construct a plot of sat vs salary
+# Include a "best fit linear regression model" (HINT: method = "lm")
+
+ggplot(education, aes(x=salary, y=sat))+
+  geom_point()+
+  geom_smooth(method="lm")
+```
+**Observations**
+* The relationship between spending (expendature or salary) seems to be negative...
+* As spending goes up, SAT scores go down (seems counter-intuitive)
+* However, the relationship doesn't look very strong
+
+### Exercise 3 {.unnumbered}
+```{r}
+ggplot(education, aes(x=salary, y=sat, color=expend))+
+  geom_point()
+```
+
+### Exercise 4 {.unnumberd}
+```{r}
+# splits the best-fit line into multiple lines to better fit the data
+# changing "2" to "3" generates more lines
+ggplot(education, aes(y = sat, x = salary, color = cut(expend, 3))) + 
+  geom_point() + 
+  geom_smooth(se = FALSE, method = "lm")
+```
+* for most of the data, there is a negative relationship between salary and SAT
+* but, when salary is greater than 45, the relationship is positive. these few points have a higher salary and expenses, but lower SAT scores than states w/ low salary and low spending
+
+### Exercise 5 {.unnumbered}
+```{r}
+ggplot(education, aes(x=fracCat))+
+  geom_bar()
+```
+```{r}
+ggplot(education, aes(x=sat, fill=fracCat))+
+  geom_density(alpha=0.7)+
+  facet_wrap(~fracCat)
+```
+* states where a lower fraction of students take the SAT have a higher average SAT score (~1050), but states with a greater number of students that take the SAT have a noticiably lower average score (~900)
+* if less students take the test, it's probably the best students who take it, which causes the average to go up
+* if more students take the SAT in a state, the greater number of test-takers causes the average to go down (eg people who are forced to take it and don't try)
+
+```{r}
+ggplot(education, aes(x=expend, y=sat, color=fracCat))+
+  geom_point()+
+  geom_smooth(method="lm")
+```
+* states w/ higher average SAT scores spend the same amount, if not less, than states with lower SAT scores
+* however, the cluster of points with high SAT scores are all from states with low percentage of students that take the test (0-15%)
+* when just looking at the blue points (45-100%), as spending increases, SAT score does appear to increase a little bit (the same trend is true within each fraction-SAT score goes up as spending increases)
+* the high outliers (high SAT, low spending) skew the slope of the best-fit line to be negative 
+
+
+**Simpson's Paradox**
+* Because different states have varying percentages of students that took the SAT, comparing SAT scores and spending shows that as spending increases, SAT score decreases.
+* The fraction of students that took the test (fracCat) is a confounding variable and skews the data visualization
+* if not required to take the sat, if a student is behind or struggling in school, they probably wouldn't take the SAT and wouldn't bring the average down
+
+## Optional Exercises
+
