--- a/bw/bw-bi.qmd
+++ b/bw/bw-bi.qmd
@@ -5,22 +5,28 @@ title: "Bivariate Viz"
 Use this file to generate a professional looking **bivariate** visualization.  The visualization will not perfect the first time but you are expected to improve it throughout the semester especially after covering advanced topics such as effective viz.
 
 ```{r}
+#| fig-alt: 3 box plots comparing temperatures (in Celsius) of three different locations in Australia 
+
 # set-up (load packages, import data)
 library(tidyverse)
-library(ggridges)
-elections <- read.csv("https://mac-stat.github.io/data/election_2020_county.csv")
+weather <- read.csv("https://mac-stat.github.io/data/weather_3_locations.csv")
 
-# create a ridgeline plot
-ggplot(elections, aes(x=repub_pct_20,y=fct_reorder(state_abbr, repub_pct_20), fill=historical))+
-  geom_density_ridges(alpha=0.5)+
-  scale_fill_manual(values = c("blue", "purple", "red"))+
-  labs(x="% of GOP votes", y="State")
+# create plot
+# How do 3pm temperatures (temp3pm) differ by location?
+ggplot(weather, aes(y=temp3pm, fill=location))+
+  geom_boxplot(width=0.7)+
+  facet_wrap(~location)+
+  labs(title = "Temperatures at 3pm in Three Australian Locations",
+       y = "Temperature (*C)",
+       fill = "Location",
+       caption = "created by Sarah, data from weatherAUS in the rattle package"
+       )+
+  theme(plot.title = element_text(hjust=0.5, face="bold"),
+        axis.text.x = element_blank(),
+        axis.ticks.x = element_blank(),
+        plot.caption = element_text(face="italic"), size = 8)+
+    scale_fill_viridis_d(alpha=0.6)    
+
 
 ```
-* States with the most variability county to county would have a flatter bar (larger std dev), but least variability have a taller graph (smaller std dev, more concentrated by the mean)???
-  * HI, TN, WV, etc have low variability
-  * VA, NM, etc have high variability
-* Some states have a high prop of counties w/ similar percentages of GOP voters, while others have more variation
-* Interesting that some historically red states have a lower GOP vote % than historically blue states (eg NM is lower than IL)
-  * I think this could be due to states w/ high urban dem-voting pop but a lot of rural GOP-voting counties (eg Chicago vs rural IL counties)
-  * How is % of GOP voters related to population density? Can urban vs rural explain the variation in GOP votes?
+
