--- a/bw/bw-spatial.qmd
+++ b/bw/bw-spatial.qmd
@@ -3,3 +3,52 @@ title: "Spatial Viz"
 ---
 
 Use this file to generate a professional looking **spatial** visualization.  The visualization will not perfect the first time but you are expected to improve on it throughout the semester especially after covering advanced topics such as effective viz.
+
+```{r}
+# load packages
+library(maps)
+library(sf)
+library(tidyverse)
+library(socviz)
+library(mosaic)
+
+
+# import and modify data
+data(county_map)
+starbucks <- read.csv("https://mac-stat.github.io/data/starbucks.csv")
+
+MN_map <- st_as_sf(
+  maps::map("county",
+            region = c("minnesota"), 
+            fill = TRUE,
+            plot = FALSE))
+
+starbucks_MN <- starbucks |>
+  filter(Country == "US", State.Province == "MN")
+
+```
+
+
+```{r}
+#| fig-alt: "Map showing Starbucks locations in Minnesota"
+
+# plots
+ggplot(MN_map)+
+  geom_sf()+
+  geom_point(
+    data = starbucks_MN,
+    aes(x=Longitude, y=Latitude),
+    size=1.75,
+    alpha = 0.5,
+    color = "darkgreen")+
+  theme_map()+
+  labs(title = "Starbucks in Minnesota",
+       subtitle = "Each green dot represents 1 Starbucks location",
+       caption = "map created by Sarah, Starbucks data by Danny Kaplan")+
+  theme(plot.title=element_text(color="darkgreen", face="bold", size=25),
+        plot.subtitle=element_text(size=10),
+        plot.caption = element_text(size=8, face = "italic"))
+```
+
+
+
